DOCS-2652: Wrap up header fixes
Don't have time to hammer out a better solution for the nesting Solutions menu, had to resort to expanded by default.

--- a/static/custom.css
+++ b/static/custom.css
@@ -199,10 +199,11 @@ p,h1,h2,h3,h4,th,td,a {
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 10;
+  margin-top: -.5em;
+  margin-left: -1.5em;
 }
 .nested-menubutton:hover + .truenas-nested-menudropdown {display: block;}
 .truenas-nested-menudropdown:hover {
-
 }
 
 .truenas-nested-menudropdown a {
@@ -213,6 +214,11 @@ p,h1,h2,h3,h4,th,td,a {
   padding: 12px 16px;
   text-decoration: none;
   display: block;
+}
+
+.nested-menubutton a {
+  margin-left: 2rem;
+
 }
 
 /* End site header */
